# Comprehensive-Head-Classification

./: .gitignore  README.md  build_chc_onnx.py  pyproject.toml
benchmark-app/: .npmrc  index.html  package.json  pnpm-lock.yaml  tsconfig.electron.json  tsconfig.json  vite.config.ts
benchmark-app/electron/: main.ts  preload.ts
benchmark-app/scripts/: benchmark.mjs  dev.mjs  prepare-assets.mjs  preview.mjs
benchmark-app/src/: main.ts  styles.css  types.d.ts
